# Novum

./: .gitignore  README.md  package.json  spec.md
apps/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: phase-2-spec.md  phase-3-spec.md  phase-4-spec.md
licenses/science-skills/: NOTICE.md
patches/science-skills/: README.md
services/research/: README.md  pyproject.toml
services/research/novum_research/: __init__.py  app.py  paperqa_adapter.py  schemas.py  skill_registry.py  skill_runner.py
services/research/tests/: test_schemas.py  test_skill_registry.py
