[project]
name = "novum-research"
version = "0.1.0"
description = "Local research service for Novum PaperQA workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "paper-qa>=5,<6",
  "pydantic>=2.8",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
