[package]
name = "novum-desktop"
version = "0.1.0"
description = "Desktop research IDE for long-term scientific work."
authors = ["v6582374-netizen"]
license = ""
repository = "https://github.com/v6582374-netizen/Novum"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "novum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha2 = "0.10.9"
chrono = "0.4.45"
lopdf = "0.36.0"
tauri-plugin-dialog = "2.7.1"
